# simulaci-n-UE

./: .gitignore  CMakeLists.txt  UE- conceptos.odt  UE_compacto.md  main.cpp  ue_simulacion.R  ue_simulacion_ggplot.R
prototipos/: 01_evento_raro_sostenido.R  02_probabilidad_condicionada.R  03_paisaje_costo.R  04_clases_metaestables.R  05_metricas_dominancia.R  06_validacion.R  ejemplo_uso.R  plantilla_prototipo.R  ue_funciones.R
src/: Simulator.hpp  Visualization.hpp
src/analysis/: DynamicsAnalyzer.hpp  MetastableClassDetector.hpp  ValidationSuite.hpp
src/core/: ConditionedProbability.hpp  CostLandscape.hpp  ERSCondition.hpp  StateSpace.hpp
src/systems/: SystemConfig.hpp
